<resources>
    <string name="app_name">微看</string>
    <string name="nav_header_login_tip">登录网易云音乐\n320K高音质无限下载，手机电脑多端同步</string>
    <string name="nav_header_login">立即登录</string>
    <string name="nav_message">我的消息</string>
    <string name="nav_vip">会员中心</string>
    <string name="nav_store">商城</string>
    <string name="nav_freemusic_online">在线听歌免流量</string>
    <string name="nav_checkmusic">听歌识曲</string>
    <string name="nav_theme">主题换肤</string>
    <string name="nav_night">夜间模式</string>
    <string name="nav_stopdelay">定时停止播放</string>
    <string name="nav_qrscan">扫一扫</string>
    <string name="nav_musicclock">音乐闹钟</string>
    <string name="nav_car">驾驶模式</string>
    <string name="nav_setup">设置</string>
    <string name="nav_exit">退出应用</string>

    <string name="status_source">%1$s\t\t来自%2$s</string>

    <string name="my_weibo_login">使用微博账号登录</string>
    <string name="my_header_description">简介：%s</string>
    <string name="my_header_nodescription">暂无介绍</string>
    <string name="my_friends_count">关注数</string>
    <string name="my_statues_count">微博数</string>
    <string name="my_fans_count">粉丝数</string>

    <string name="status_repost">转发</string>
    <string name="status_comment">评论</string>
    <string name="status_like">赞</string>

    <string name="user_function_message_at">\@我的微博</string>
    <string name="user_function_message_comments">我的点评</string>
    <string name="user_function_message_fabulous">我的赞</string>
    <string name="user_function_ariticle">我的文章</string>
    <string name="user_function_collection">我的收藏</string>
    <string name="user_function_more">更多</string>
    <string name="user_function_setting">设置</string>

    <string name="comment_title">微博评论</string>
    <string name="comment_reposts_count">转发%s</string>
    <string name="comment_comments_count">评论%s</string>
    <string name="comment_liked_count">赞%s</string>
    <string name="sort_by_hot">按热度</string>
    <string name="sort_by_time">按时间</string>
    <string name="status_loading">加载中…</string>
    <string name="status_load_no_more">没有更多微博</string>
    <string name="status_load_retry">点击重试</string>
    <string name="comment_no_more_comment">没有更多评论</string>
    
    <string name="share_comment_editor_cancel">取消</string>
    <string name="share_comment_editor_send">发送</string>
    <string name="editor_type_comment">评论微博</string>
    <string name="editor_type_share">转发微博</string>
    <string name="editor_hint_comment">写评论…</string>
    <string name="editor_hint_repost">说说你的分享心得…</string>
    <string name="comment_content_tolong">字数不能超过140个</string>

    <string name="contacts_title">联系人</string>

    <string name="user_info_friends_count">关注%s</string>
    <string name="user_info_followers_count">粉丝%s</string>
    <string name="user_info_main">主页</string>
    <string name="user_info_status">微博</string>
    <string name="user_info_pictures">相册</string>
    
</resources>
