<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.ider.cloudreader.views.UserInfoHeader
        android:id="@+id/user_info_header"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#ff0000"
        app:layout_constraintHorizontal_bias="1.0" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        android:background="@color/white"
        android:elevation="3dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/user_info_header">

        <TextView
            android:id="@+id/user_info_tab_main"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:clickable="true"
            android:text="@string/user_info_main"
            android:textColor="@drawable/status_comment_activity_count_color"/>
        <TextView
            android:id="@+id/user_info_tab_status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:clickable="true"
            android:text="@string/user_info_status"
            android:textColor="@drawable/status_comment_activity_count_color"/>
        <TextView
            android:id="@+id/user_info_tab_picture"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:clickable="true"
            android:text="@string/user_info_pictures"
            android:textColor="@drawable/status_comment_activity_count_color"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>