<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/status_comment_topbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white" >
        <ImageView
            android:id="@+id/status_comment_nav_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:clickable="true"
            android:src="@drawable/navigation_back_drawable"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:onClick="back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_title"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/diverLine"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_comment_topbar"
        android:background="@color/white"
        android:id="@+id/relativeLayout2">

        <TextView
            android:id="@+id/status_comment_reweeted_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@drawable/status_comment_activity_count_color"
            android:layout_centerVertical="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/status_comment_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@drawable/status_comment_activity_count_color"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/status_comment_reweeted_count"
            android:clickable="true"/>

        <TextView
            android:id="@+id/status_comment_liked_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@drawable/status_comment_activity_count_color"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/comment_count_tab"
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:background="@android:color/holo_orange_dark"
            android:layout_alignParentBottom="true"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/diverLine"/>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/status_comment_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        android:overScrollMode="never"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linearLayout2"
        android:background="@color/white"
        android:elevation="15dp">
        <TextView
            android:id="@+id/comment_bottom_repost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/status_repost"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:background="@color/diverLine"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/comment_bottom_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/status_comment"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>
        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:background="@color/diverLine"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/comment_bottom_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/status_like"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>