<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="142dp">

    <ImageView
        android:id="@+id/my_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/ic_com_sina_weibo_sdk_login_button_with_frame_logo_pressed"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/my_name"
        android:text="请先登录"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toRightOf="@+id/my_icon"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginBottom="5dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="53dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="53dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/my_subtitle"
        android:text="简介：暂无介绍"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="@+id/my_name"
        android:textSize="13sp" />


    <TextView
        android:id="@+id/my_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="invisible"
        android:text="@string/my_friends_count"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_statues" />

    <TextView
        android:id="@+id/my_statues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/my_friends"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.3"
        android:visibility="invisible"
        android:text="@string/my_statues_count"
        app:layout_constraintTop_toBottomOf="@+id/statues_count" />

    <TextView
        android:id="@+id/my_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/my_friends"
        android:visibility="invisible"
        android:text="@string/my_fans_count"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/my_friends"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.7" />

    <TextView
        android:id="@+id/statues_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="@+id/my_statues"
        app:layout_constraintRight_toRightOf="@+id/my_statues" />

    <TextView
        android:id="@+id/friends_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/my_friends"
        app:layout_constraintRight_toRightOf="@+id/my_friends"
        app:layout_constraintTop_toTopOf="@+id/statues_count" />

    <TextView
        android:id="@+id/followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/my_followers"
        app:layout_constraintRight_toRightOf="@+id/my_followers"
        app:layout_constraintBottom_toTopOf="@+id/my_followers"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@+id/friends_count" />

    <ImageView
        android:layout_width="368dp"
        android:layout_height="1dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/imageView2"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/my_icon"
        android:alpha="0.3" />

    <Button
        android:text="使用微博账号登录"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />
</android.support.constraint.ConstraintLayout>