<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ider.cloudreader.main.MainActivity">

    <Button
        android:id="@+id/my_login_button"
        android:text="使用微博登陆"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/my_name"
        android:text="请先登录"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:onClick="login"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/my_icon"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        android:textAllCaps="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_icon"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:src="@drawable/com_sina_weibo_sdk_login_button_with_original_logo"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/my_subtitle"
        android:text="简介：暂无介绍"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/my_name"
        android:textSize="13sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/my_name" />

    <TextView
        android:id="@+id/my_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_statues"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="invisible"
        android:text="@string/my_friends_count"/>

    <TextView
        android:id="@+id/my_statues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/my_friends"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/my_icon"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.3"
        android:visibility="invisible"
        android:text="@string/my_statues_count"/>

    <TextView
        android:id="@+id/my_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/my_friends"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/my_friends"
        app:layout_constraintHorizontal_bias="0.7"
        android:visibility="invisible"
        android:text="@string/my_fans_count"/>

    <TextView
        android:id="@+id/statues_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/my_statues"
        app:layout_constraintRight_toRightOf="@+id/my_statues"
        app:layout_constraintBottom_toTopOf="@+id/my_statues" />

    <TextView
        android:id="@+id/friends_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/my_friends"
        app:layout_constraintRight_toRightOf="@+id/my_friends"
        app:layout_constraintBottom_toTopOf="@+id/my_friends"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/my_followers"
        app:layout_constraintRight_toRightOf="@+id/my_followers"
        app:layout_constraintBottom_toTopOf="@+id/my_followers"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="368dp"
        android:layout_height="0.5dp"
        tools:layout_editor_absoluteX="8dp"
        android:id="@+id/imageView2"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/my_icon"
        android:alpha="0.3" />

</android.support.constraint.ConstraintLayout>
